# noorinalabs_main

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  cross-repo-status.json  dependencies.yml  pyproject.toml
.claude/: settings.json
.claude/annunaki/: errors.jsonl  errors.jsonl.bak.20260429194801  errors.jsonl.bak.20260430061805
.claude/context/: project-architecture.md  user-preferences.md
.claude/hooks/: _shell_parse.py  annunaki_log.py  annunaki_monitor.py  auto_add_issue_to_board.py  auto_set_env_test.py  bash_dispatcher.py  block_gh_pr_review.py  block_git_config.py  block_no_verify.py  block_shutdown_without_retro.py  block_stale_tmp_message_file.py  dispatcher.py  enforce_librarian_consulted.py  no_worktree_self_delete.py  ontology_tracker.py  session_handoff.py  session_start.py  suggest_generic_prompt.py  test_validate_labels.py  validate_branch_freshness.py  validate_commit_identity.py  validate_edit_completion.py  validate_labels.py  validate_lockfile_paths.py  validate_pr_ci_status.py  validate_pr_review.py  validate_review_comment_format.py  validate_vps_host.py  validate_wave_audit.py  validate_wave_context.py  validate_workflow_paths_coverage.py  warn_ghcr_image.py
.claude/scratch/: w4-kickoff.py  w4-project-add.py
.claude/skills/: team-reset.md  wave-retro.md
.claude/team/: charter.md  (+3 more)
docs/: secrets-audit-2026-04-24.md
integration-tests/: .env.test  .gitignore  Dockerfile.runner  README.md  docker-compose.test.yml  pytest.ini  run-tests.sh
ontology/: ONTOLOGY_SETUP_PROMPT.md  checksums.json  conventions.md  domain.yaml  services.yaml
(+143 files in other folders)
