[project]
name = "noorinalabs-main"
version = "0.0.0"
description = "Org-level coordination root for noorinalabs (not a published package)"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = []
